# gsvd4py

./: .gitignore  Claude.md  README.md  pyproject.toml
gsvd4py/: __init__.py  _gsvd.py  _lapack.py
tests/: test_gsvd.py
